# Navis-AI

./: .env.example  .env.production  .gitignore  BUILD_COMPLETE.md  Dockerfile.backend  Dockerfile.worker  FINAL_STATUS_REPORT.md  GIT_PUSH_SUMMARY.md  INDEX.md  PROJECT_RUNNING.md  README.md  SESSION_SUMMARY.md  START_HERE.md  STATUS.md  TESTING_GUIDE.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  postgres-init.sql
ai/: asset_selector.py  composing_orchestrator.py  gpt_client.py  orchestrator.py  scene_planner.py  schemas.py  script_engine.py  storyboard_engine.py  subtitle_generator.py  voice_engine.py
backend/: celery_app.py  config.py  cost_control.py  database.py  main.py  models.py  monitoring.py  notifications.py  permissions.py  pyproject.toml  schemas.py  security.py  storage.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_cost_threshold_and_fix_usage_logs.py  003_workspaces_rbac.py  004_migrate_projects_to_workspaces.py
backend/routes/: admin.py  assets.py  auth.py  projects.py  renders.py  workspaces.py
backend/tasks/: compose_task.py  dummy_task.py  render_task.py
backend/tests/: conftest.py  test_ai_planning.py  test_assets.py  test_auth.py  test_cost_control.py  test_load_queue.py  test_monitoring.py  test_notifications.py  test_projects.py  test_renders.py  test_security.py  test_storage.py  test_voice_subtitles.py  test_workspaces_rbac.py
blender/: render_scene.py  scene_loader.py
docs/: DEPLOYMENT_RUNBOOK.md  LOCAL_DEV_SETUP.md  MVP_COMPLETION_REPORT.md  PHASE_0_SUMMARY.md  PHASE_10_SUMMARY.md  (+16 more)
(+21 files in other folders)
