[tool.poetry]
name = "maritime-studio-backend"
version = "0.1.0"
description = "Yetrix Maritime AI Studio backend"
authors = ["Yetrix Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.12.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.0"
python-multipart = "^0.0.6"
celery = "^5.3.0"
redis = "^5.0.0"
boto3 = "^1.28.0"
requests = "^2.31.0"
openai = "^1.3.0"
pydub = "^0.25.1"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
